<resources>
    <string name="app_name">HuntingJobs</string>
    <string name="txtMailHint">Email</string>
    <string name="txtPasswordHint">Password</string>
    <string name="btnLogin">Login</string>
    <string name="erroPass">Password Inválida</string>
    <string name="erro">Username Inválido</string>
    <string name="itemLista">Página Inicial</string>
    <string name="homePage">Página Incial</string>
    <string name="navPerfil">Perfil</string>
    <string name="txtOutros">Outros</string>
    <string name="settings">Definições</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="meusPosts">Meus Posts</string>
    <string name="emailSimples">Email</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NomeUtilizador">NomeUtilizador</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="anuncioLista">Anuncios</string>
    <string name="no_internet">Sem acesso á internet</string>
    <string name="btnRegisto">Criar Conta!</string>
    <string name="usernameinvalido">Username Inválido</string>
    <string name="emailinvalido">Email Inválido</string>
    <string name="candidatura">Candidatar-me!</string>
    <string name="candidaturaLista">Candidaturas</string>
    <string name="dialog_title">Cancelar Candidatura</string>
    <string name="dialog_mensagem">Tem a certeza que quer cancelar esta candidatura?</string>
    <string name="sair_logout">Logout</string>
    <string name="content">Para navegar as diferentes áreas da aplicação, use o menu lateral</string>
    <string name="bem_vindo_welcome">Bem vindo ao Hunting Jobs!</string>
    <string name="verMais">Ver Website...</string>
    <string name="aboutus">Este projeto foi desenvolvido no âmbito da UC: Acesso Móvel a Sistemas de Informação</string>
</resources>