<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menuLateral">
        <item
            android:id="@+id/navHomePage"
            android:icon="@drawable/ic_home_page"
            android:title="@string/homePage" />
        <item
            android:id="@+id/navPerfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/navPerfil" />
        <item
            android:id="@+id/listaAnuncio"
            android:icon="@drawable/ic_lista"
            android:title="@string/anuncioLista"/>
        <item
            android:id="@+id/listaCandidaturas"
            android:icon="@drawable/ic_lista"
            android:title="@string/candidaturaLista"/>

    </group>

    <item android:title="@string/txtOutros">
        <menu>
            <group
                android:id="@+id/nav_Outros"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sobre_nos"
                    android:icon="@drawable/ic_info"
                    android:title="@string/sobre_nos" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/sair_logout" />
            </group>
        </menu>
    </item>

</menu>