<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.LoginActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Faça Login para continuar"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#305370"
            android:letterSpacing="0.03" />





    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="#305370"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="#000"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"/>

    <EditText
        android:id="@+id/etUsernameInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inserir Username"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inserir Password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Esqueceu-se da Password?"
        android:textSize="18dp"
        android:textColor="#305370"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#305370"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/btnLogin" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Não tem conta? Registe-se aqui!"
        android:textSize="18dp"
        android:textColor="#305370"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>







    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMailInsert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtMailHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/txtPasswordHint"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etMailInsert"
        app:layout_constraintStart_toStartOf="@+id/etMailInsert"
        app:layout_constraintTop_toBottomOf="@+id/etMailInsert"
        android:autofillHints="" />


</LinearLayout>